--- a/markdown/20240314-1.md
+++ b/markdown/20240314-1.md
@@ -3,7 +3,7 @@ Title: 41123210 產品協同
 Date: 2024-03-14 16:00
 Category: w1
 Tags: 網誌編寫
-Slug: 2024-Spring-w1-blog-tutorial
+Slug: w4
 Author: 41123210
 ---
 
