--- a/markdown/20240321.md
+++ b/markdown/20240321.md
@@ -10,4 +10,10 @@ Author: 41123210
 2024 Spring 網際內容管理與協同產品設計實習課程教學導引.
 
 <!-- PELICAN_END_SUMMARY -->
-# 第5週翻譯
+# 第5週
+## w5 分組任務
+自行搜尋前面已經發布的教學影片, 分別
+
+1.在影片上填上字幕, 另行上傳到可以嵌入到各分組的網站上
+2.從影片字幕中整理出逐字稿, 放在影片下方, 以 .txt 連結安排
+3.並在各嵌入的教學影片下方, 以摘要方式說明該影片的教學重點
