--- a/markdown/20240321.md
+++ b/markdown/20240321.md
@@ -12,6 +12,10 @@ Author: 41123210
 <!-- PELICAN_END_SUMMARY -->
 # 第5週
 ## w5 分組任務
+第七部教學影片
+https://nfuedu-my.sharepoint.com/:v:/g/personal/41123210_nfu_edu_tw/EcaWSQ-D8Y5Lg4YmJTVnbpYB1WcCn8pzvUaxi_PVN-JOow?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=OHTne6
+第八部教學影片
+https://nfuedu-my.sharepoint.com/:v:/g/personal/41123210_nfu_edu_tw/EVJRwEfz3ihAtuJFMqf5jKMBrZ0mpQ9FQ13I1f1ItdTukg?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=miP0Mh
 自行搜尋前面已經發布的教學影片, 分別
 
 1.在影片上填上字幕, 另行上傳到可以嵌入到各分組的網站上
