--- a/markdown/41123210 0613-1.md
+++ b/markdown/41123210 0613-1.md
@@ -1,9 +1,9 @@
 ---
 Title: W17-項目1
 Date: 2024-06-13 14:24
-Category: 41123210 w17
+Category: 41123210 w17-1
 Tags: 41123210 零件繪製
-Slug:  41123210 w17
+Slug:  41123210 w17-1
 Author: 41123210
 ---
 # 零件繪製過程
