--- a/markdown/41123210 0613-2.md
+++ b/markdown/41123210 0613-2.md
@@ -1,9 +1,9 @@
 ---
 Title: W17-項目2
 Date: 2024-06-13 15:23
-Category: 41123210 w17
+Category: 41123210 w17-2
 Tags: 41123210 組成機械
-Slug:  41123210 w17
+Slug:  41123210 w17-2
 Author: 41123210
 ---
 # 組裝過程
